--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div>𝐉𝐨𝐒𝐒𝐀 𝐂𝐨𝐮𝐧𝐜𝐞𝐥𝐨𝐫</div>
         <ul class="text-white flex justify-end space-x-3 pr-3">
             <li class="cursor-pointer "><button class="h-12 border-b-2"><a href="index.html"> Home</a></button></li>
-            <li class="cursor-pointer"><button class="h-12 hover:underline"> <a href=""> Blogs</a></button></li>
+            <li class="cursor-pointer"><button class="h-12 hover:underline"> <a href="blogs.html"> Blogs</a></button></li>
             <li class="cursor-pointer"><button class="h-12 hover:underline"> <a href=""> Guide</a></button></li>
             <li class="cursor-pointer"><button class="h-12 hover:underline"> <a href=""> About us</a></button></li>
 
