--- a/blogs.html
+++ b/blogs.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Blogs|JoSSA Councelor</title>
+    <title>Blogs | JoSSA Councelor</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/tailwind.css">
@@ -16,13 +16,13 @@
 
 <body class="bg-gray-100">
     
-        <nav class="bg-orange-500 w-full h-12 flex justify-between">
-            <div>𝐉𝐨𝐒𝐒𝐀 𝐂𝐨𝐮𝐧𝐜𝐞𝐥𝐨𝐫</div>
+    <nav class="bg-orange-500 w-full flex flex-wrap justify-center sm:justify-between ">
+        <div class="my-2 mx-3 font-bold text-white text-2xl">JoSSA Councelor</div>
             <ul class="text-white flex justify-end space-x-3 pr-3">
                 <li class="cursor-pointer "><button class="h-12  hover:underline"><a href="index.html"> Home</a></button></li>
                 <li class="cursor-pointer"><button class="h-12 border-b-2"> <a href="blogs.html"> Blogs</a></button></li>
-                <li class="cursor-pointer"><button class="h-12 hover:underline"> <a href=""> Guide</a></button></li>
-                <li class="cursor-pointer"><button class="h-12 hover:underline"> <a href=""> About us</a></button></li>
+                <li class="cursor-pointer"><button class="h-12 hover:underline"> <a href="guide.html"> Guide</a></button></li>
+                <li class="cursor-pointer"><button class="h-12 hover:underline"> <a href="about us.html"> About us</a></button></li>
             </ul>
         </nav><br>
         <div class="col-lg-12 text-center">
