--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 </head>
 
 <body>
-    <nav class="bg-orange-500 w-full flex justify-between h-12">
-        <div>𝐉𝐨𝐒𝐒𝐀 𝐂𝐨𝐮𝐧𝐜𝐞𝐥𝐨𝐫</div>
+    <nav class="bg-orange-500 w-full flex flex-wrap justify-center sm:justify-between ">
+        <div class="my-2 mx-3 font-bold text-white text-2xl">JoSSA Councelor</div>
         <ul class="text-white flex justify-end space-x-3 pr-3">
             <li class="cursor-pointer "><button class="h-12 border-b-2"><a href="index.html"> Home</a></button></li>
             <li class="cursor-pointer"><button class="h-12 hover:underline"> <a href="blogs.html"> Blogs</a></button></li>
-            <li class="cursor-pointer"><button class="h-12 hover:underline"> <a href=""> Guide</a></button></li>
-            <li class="cursor-pointer"><button class="h-12 hover:underline"> <a href=""> About us</a></button></li>
+            <li class="cursor-pointer"><button class="h-12 hover:underline"> <a href="guide.html"> Guide</a></button></li>
+            <li class="cursor-pointer"><button class="h-12 hover:underline"> <a href="about us.html"> About us</a></button></li>
 
         </ul>
     </nav>
@@ -91,7 +91,7 @@
                 <div class="  whitespace-nowrap font-bold">Choose Institute Type</div>
                 <div>
                     <ul>
-                        <li><button class="btn"> IIT'S</button></li>
+                        <li><button class="btn"><a href="/college_finder_iit.html">IIT'S</a> </button></li>
                         <li><button class="btn"> NIT's + IIIT's</button></li>
                     </ul>
                 </div>
