--- a/college_finder_iit.html
+++ b/college_finder_iit.html
@@ -6,8 +6,23 @@
     <title>IITs</title>
     <link rel="stylesheet" href="./tailwind.css">
 </head>
-<body>
-  <div class="container text-center">
+<body class="bg-gray-100">
+
+  <nav class="bg-orange-500 w-full flex flex-wrap justify-center sm:justify-between ">
+    <div class="my-2 mx-3 font-bold text-white text-2xl">JoSSA Councelor</div>
+    <ul class="text-white flex justify-end space-x-3 pr-3">
+        <li class="cursor-pointer"><button class="h-12 hover:underline"><a href="index.html">Home</a></button></li>
+        <li class="cursor-pointer"><button class="h-12 hover:underline"><a href="blogs.html">Blogs</a></button></li>
+        <li class="cursor-pointer"><button class="h-12 hover:underline"><a href="guide.html">Guide</a></button></li>
+        <li class="cursor-pointer"><button class="h-12 hover:underline"><a href="about us.html">About us</a></button></li>
+    </ul>
+  </nav>
+
+  <div class="text-center font-bold text-2xl mt-8">
+    College Finder (IITs)
+  </div>
+
+  <div class="text-center">
     <div class="inline-flex flex-col flex-wrap gap-4 p-4 text-right">
       <div class="px-2">
         <label for="gender-radio" class="">Gender: </label>
@@ -84,24 +99,6 @@
               <option value="placement">Placement Statistics</option>
             </select>
         </div>
-        <!-- <div>
-          <input class="
-            form-checkbox 
-            appearance-none 
-            h-4 w-4 
-            border border-gray-300 rounded-sm 
-            bg-white 
-            focus:checked:bg-orange-500 checked:bg-orange-500 checked:border-orange-500 
-            focus:outline-none focus:ring focus:ring-orange-500 
-            transition ease-in-out duration-200 
-            mt-1 mr-2 
-            align-top bg-no-repeat bg-center bg-contain float-left 
-            cursor-pointer
-          " type="checkbox" value="" id="flexCheckDefault">
-          <label class="inline-block text-gray-800" for="flexCheckDefault">
-            Default checkbox
-          </label>
-        </div> -->
     </div>
     
     <div class="">
@@ -112,52 +109,6 @@
           w-96 mx-auto my-8
           text-gray-900 text-sm font-medium
         ">
-            <a href="#" class="
-              block 
-              px-4 py-2 
-              border-b border-gray-200 
-              w-full 
-              rounded-t-lg 
-              hover:bg-gray-100 hover:text-orange-500 
-              focus:outline-none focus:ring-2 focus:ring-orange-500 focus:text-orange-500 
-              cursor-pointer
-            ">
-                Profile
-            </a>
-            <a href="#" class="
-              block 
-              px-4 py-2 
-              border-b border-gray-200 
-              w-full 
-              hover:bg-gray-100 hover:text-orange-500 
-              focus:outline-none focus:ring-2 focus:ring-orange-500 focus:text-orange-500 
-              cursor-pointer
-            ">
-                Settings
-            </a>
-            <a href="#" class="
-              block 
-              px-4 py-2 
-              border-b border-gray-200 
-              w-full 
-              hover:bg-gray-100 hover:text-orange-500 
-              focus:outline-none focus:ring-2 focus:ring-orange-500 focus:text-orange-500 
-              cursor-pointer
-            ">
-                Messages
-            </a>
-            <a href="#" class="
-              block 
-              px-4 py-2 
-              border-b border-gray-200 
-              w-full 
-              rounded-b-lg 
-              hover:bg-gray-100 hover:text-orange-500 
-              focus:outline-none focus:ring-2 focus:ring-orange-500 focus:text-orange-500 
-              cursor-pointer
-            ">
-                Download
-            </a>
         </div>
       </div>
     </div>
