changed name of about us to about_us

--- a/about_us.html
+++ b/about_us.html
@@ -22,7 +22,7 @@
                 <li class="cursor-pointer "><button class="h-12  hover:underline"><a href="index.html"> Home</a></button></li>
                 <li class="cursor-pointer"><button class="h-12 hover:underline"> <a href="blogs.html"> Blogs</a></button></li>
                 <li class="cursor-pointer"><button class="h-12 hover:underline"> <a href="guide.html"> Guide</a></button></li>
-                <li class="cursor-pointer"><button class="h-12 border-b-2"> <a href="about us.html"> About us</a></button></li>
+                <li class="cursor-pointer"><button class="h-12 border-b-2"> <a href="about_us.html"> About us</a></button></li>
             </ul>
         </nav>
 
