--- a/college_finder_iit.html
+++ b/college_finder_iit.html
@@ -30,7 +30,7 @@
           <input type="radio" name="gender" id="radio-male" value="male" checked class="
             form-radio 
             mb-1 mx-1
-            rounded-full bg-white checked:bg-orange-500 focus:checked:bg-orange-500 
+            rounded-full bg-white checked:bg-orange-500 focus:checked:bg-orange-500 hover:checked:bg-orange-500
             focus:ring focus:ring-orange-200 focus-ring-opacity-50 
             transition ease-in-out duration-200
             outline-none cursor-pointer
@@ -39,7 +39,7 @@
           <input type="radio" name="gender" id="radio-female" value="female" class="
             form-radio 
             mb-1 mx-1
-            rounded-full bg-white checked:bg-orange-500 focus:checked:bg-orange-500 
+            rounded-full bg-white checked:bg-orange-500 focus:checked:bg-orange-500 hover:checked:bg-orange-500
             focus:ring focus:ring-orange-200 focus-ring-opacity-50 
             transition ease-in-out duration-200
             outline-none cursor-pointer
@@ -59,6 +59,7 @@
               transition ease-in-out duration-200
               focus:ring focus:ring-orange-200 focus:ring-opacity-50
               focus:text-gray-700 focus:bg-white focus:border-orange-500 focus:outline-none
+              cursor-pointer
             ">
               <option value="cs" selected>Computer Science</option>
               <option value="ece">Electronics</option>
@@ -78,6 +79,7 @@
               transition ease-in-out duration-200
               focus:ring focus:ring-orange-200 focus:ring-opacity-50
               focus:text-gray-700 focus:bg-white focus:border-orange-500 focus:outline-none
+              cursor-pointer
             ">
         </div>
         <div>
@@ -92,6 +94,7 @@
               transition ease-in-out duration-200
               focus:ring focus:ring-orange-200 focus:ring-opacity-50
               focus:text-gray-700 focus:bg-white focus:border-orange-500 focus:outline-none
+              cursor-pointer
             ">
               <option value="college_name" selected>Name</option>
               <option value="nirf">NIRF Ranking</option>
