modified iit info and  homepage

--- a/guide.html
+++ b/guide.html
@@ -25,9 +25,9 @@
             <li class="cursor-pointer"><button class="h-12 hover:underline"> <a href="about_us.html"> About us</a></button></li>
         </ul>
     </nav>
-
-    <br><br><br><br>
-    <div class="flex justify-center">
+<div class=" my-12 text flex justify-center font-bold text-3xl">How you can use this website:</div>
+   
+    <div class="flex justify-center my-12">
         <ol class="mx-6 gap-2  md:text-xl max-w-prose list-decimal">
             <li>Firstly we recommend you to watch the videos we have provided in <a href="index.html"> home
                     page</a>, they will give you brief
@@ -40,8 +40,9 @@
             <li>For IIT's your JEE-Advanced rank is considered, and for NIT's,IIIT's, IIEST and Other-GFTI's your
                 JEE-mains
                 rank is considered.</li>
-            <li>Choose whether you want to check your rank for IIT's or NIT+IIIt's</li>
-            <li>You will be asked to enter your gender,branch and your rank.</li>
+            <li class="mb-2">Choose whether you want to check your rank for IIT's or NIT+IIIt's</li>
+            <img src="choose.png" alt="" width="533" height="300 ">
+            <li class="mt-2">You will be asked to enter your gender,branch and your rank.</li>
             <li>Website will give you list of colleges in which you can get your desired branch.</li>
             <li>You can sort list of college according to ...</li>
         </ol>
