--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </ul>
     </nav>
     <div class="     bg-orange-100 h-24 md:h-44 "><br>
-        <div class="font-mono text-red-500 mx-8">Notifications!!!</div>
+        <div class="font-mono text-red-500 mx-8">Notifications!</div>
     </div>
 
     <div class="bg-gray-100">
@@ -92,7 +92,7 @@
                 <div>
                     <ul>
                         <li><button class="btn"><a href="/college_finder_iit.html">IIT'S</a> </button></li>
-                        <li><button class="btn"> NIT's + IIIT's</button></li>
+                        <li><button class="btn"><a href="college_finder_nit_and_iiit.html"> NIT's + IIIT's</a></button></li>
                     </ul>
                 </div>
                 <div class="md:hidden">
@@ -126,10 +126,10 @@
         <div class="bg-gray-300">
             <br><br>
             <div class="flex ">
-                <p class="text-red-500 mx-4">IMPORTANT</p>
-                <p>links from JoSSA</p>
+                <p class="text-red-500 ml-4 mr-1">IMPORTANT</p>
+                <p>links from JoSSA :</p>
             </div>
-            <ul class="mx-4 gap-1"><br>
+            <ul class="mx-4 ">
                 <li><button class="cursor cursor-pointer hover:bg-orange-200 rounded-sm "><a target="_blank"
                             href="https://josaa.nic.in/webinfo/File/ViewFile?FileId=21&LangId=P">JoSSA revised
                             councelling
