--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <nav class="bg-orange-500 w-full flex flex-wrap justify-center sm:justify-between ">
-        <div class="my-2 mx-3 font-bold text-white text-2xl">JoSSA Councelor</div>
+        <div class="my-2 mx-3 font-bold text-white text-2xl">JoSSA Counselor</div>
         <ul class="text-white flex justify-end space-x-3 pr-3">
             <li class="cursor-pointer "><button class="h-12 border-b-2"><a href="index.html"> Home</a></button></li>
             <li class="cursor-pointer"><button class="h-12 hover:underline"> <a href="blogs.html"> Blogs</a></button></li>
@@ -103,7 +103,7 @@
                                 counselling process actually work?</a></li>
                         <li class=""><a class="hover:text-orange-700 hover:underline" target="_blank"
                                 href="https://www.quora.com/What-are-some-tips-to-fill-choices-in-JoSAA-counselling">
-                                Some tips to fill choices in JoSAA councelling.</a></li>
+                                Some tips to fill choices in JoSAA counselling.</a></li>
                         <li class=""><a class="hover:text-orange-700 hover:underline" target="_blank"
                                 href="https://www.adda247.com/school/josaa-jee-advanced-counselling/">
                                 What is freeze,float and slide?</a></li>
@@ -132,7 +132,7 @@
             <ul class="mx-4 ">
                 <li><button class="cursor cursor-pointer hover:bg-orange-200 rounded-sm "><a target="_blank"
                             href="https://josaa.nic.in/webinfo/File/ViewFile?FileId=21&LangId=P">JoSSA revised
-                            councelling
+                            counselling
                             schedule 2021</a></button></li>
                 <li><button class="cursor cursor-pointer hover:bg-orange-200 rounded-sm "><a target="_blank"
                             href="https://josaa.nic.in/Counseling/seatallotmentresult/currentorcr.aspx">OR-CR 2021</a>
