--- a/college_finder_iit.html
+++ b/college_finder_iit.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IITs</title>
+    <title>IITs | College Finder | JoSAA Counselor</title>
     <link rel="stylesheet" href="./tailwind.css">
 </head>
 <body class="bg-gray-100">
@@ -14,7 +14,7 @@
         <li class="cursor-pointer"><button class="h-12 hover:underline"><a href="index.html">Home</a></button></li>
         <li class="cursor-pointer"><button class="h-12 hover:underline"><a href="blogs.html">Blogs</a></button></li>
         <li class="cursor-pointer"><button class="h-12 hover:underline"><a href="guide.html">Guide</a></button></li>
-        <li class="cursor-pointer"><button class="h-12 hover:underline"><a href="about us.html">About us</a></button></li>
+        <li class="cursor-pointer"><button class="h-12 hover:underline"><a href="about_us.html">About us</a></button></li>
     </ul>
   </nav>
 
