added states tothe select input

--- a/college_finder_nit_and_iiit.html
+++ b/college_finder_nit_and_iiit.html
@@ -61,8 +61,16 @@
           focus:text-gray-700 focus:bg-white focus:border-orange-500 focus:outline-none
           cursor-pointer
         ">
-          <option value="other" selected>Other</option>
+          <option value="Other" selected>Other</option>
           <option value="Tamil Nadu">Tamil Nadu</option>
+          <option value="Odisha">Odisha</option>
+          <option value="Karnataka">Karnataka</option>
+          <option value="Telangana">Telangana</option>
+          <option value="Haryana">Haryana</option>
+          <option value="West Bengal">West Bengal</option>
+          <option value="Uttar Pradesh">Uttar Pradesh</option>
+          <option value="Kerala">Kerala</option>
+          <option value="Gujarat">Gujarat</option>
         </select>
       </div>        
       <div>
