improvised guide section

--- a/guide.html
+++ b/guide.html
@@ -19,14 +19,17 @@
     <nav class="bg-orange-500 w-full flex flex-wrap justify-center sm:justify-between ">
         <div class="my-2 mx-3 font-bold text-white text-2xl">JoSSA Counselor</div>
         <ul class="text-white flex justify-end space-x-3 pr-3">
-            <li class="cursor-pointer "><button class="h-12  hover:underline"><a href="index.html"> Home</a></button></li>
-            <li class="cursor-pointer"><button class="h-12 hover:underline"> <a href="blogs.html"> Blogs</a></button></li>
+            <li class="cursor-pointer "><button class="h-12  hover:underline"><a href="index.html"> Home</a></button>
+            </li>
+            <li class="cursor-pointer"><button class="h-12 hover:underline"> <a href="blogs.html"> Blogs</a></button>
+            </li>
             <li class="cursor-pointer"><button class="h-12 border-b-2 "> <a href="guide.html"> Guide</a></button></li>
-            <li class="cursor-pointer"><button class="h-12 hover:underline"> <a href="about_us.html"> About us</a></button></li>
+            <li class="cursor-pointer"><button class="h-12 hover:underline"> <a href="about_us.html"> About
+                        us</a></button></li>
         </ul>
     </nav>
-<div class=" my-12 text flex justify-center font-bold text-3xl">How you can use this website:</div>
-   
+    <div class=" my-12 text flex justify-center font-bold text-3xl">How you can use this website:</div>
+
     <div class="flex justify-center my-12">
         <ol class="mx-6 gap-2  md:text-xl max-w-prose list-decimal">
             <li>Firstly we recommend you to watch the videos we have provided in <a href="index.html"> home
@@ -41,11 +44,18 @@
                 JEE-mains
                 rank is considered.</li>
             <li class="mb-2">Choose whether you want to check your rank for IIT's or NIT+IIIt's</li>
-            <img src="choose.png" alt="" width="533" height="300 ">
-            <li class="mt-2">You will be asked to enter your gender,branch and your rank.</li>
-            <li>Website will give you list of colleges in which you can get your desired branch.</li>
-            <li>You can sort list of college according to ...</li>
+            <img src="choose.png" alt="" width="320" height="180 ">
+            <li class="mt-2 mb-2">You will be asked to enter your gender,branch and your rank.</li>
+            <img src="finder.png" alt="" width="320" height="180 ">
+            <li class="mt-2 mb-2">Website will give you list of colleges in which you can get your desired branch.</li>
+            <img src="finder2.png" alt="" width="320" height="180 ">
+            <li>You can sort list of college according to NIRF ranking,JoSAA cutoffs and placement statistics </li>
+            <li class="mt-2 mb-2">By clicking on any college from the list you will be directed to the college info page
+                where you will get a informative video and essential information about that college</li>
+            <img src="collegeinfo.png" alt="" width="320" height="180 ">
+            <li>We hope this will help you to decide which college to choose</li>
         </ol>
+
 
 
 
