--- a/about_us.html
+++ b/about_us.html
@@ -25,25 +25,16 @@
                 <li class="cursor-pointer"><button class="h-12 border-b-2"> <a href="about_us.html"> About us</a></button></li>
             </ul>
         </nav>
+        
+        <div class="text-center font-bold text-2xl mt-8">
+            About Us
+        </div>
 
+        <div class="text-lg mt-4 mx-8">
+            This website was built as a part of Hackstack 2022 by Elbert Ronnie and Vinayak Sutar. <br>
+            All the information for this project was collected from internet sites.
+        </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- 
-
-    <script src="" async defer></script>
 </body>
 
 </html>
